[package]
name = "webscoket-balancer"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2.3", features = [ "full" ] }
json = "0.12.2"
httparse = "1.3.4"
memchr = "2.3.3"