[package]
name = "websocket-balancer"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = true

[dependencies]
tungstenite = "*"
tokio-tungstenite = {version = "0.10.1",  features = [ "tls" ]}
futures = "0.3.4"
futures-util = "0.3.4"
tokio = { version = "0.2.16", features = [ "full" ] }
tokio-tls = "0.3.0"
native-tls = "*"
json = "0.12.2"
httparse = "1.3.4"
http = "0.2.1"
base64 = "0.12.0"
thiserror = "1.0.11"
rand = "0.7.3"
bytes = "*"
dashmap = "3.7.0"
log = "0.4.8"
env_logger = "0.7.1"
derive_builder = "0.9.0"
